--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="logo-container">
+    <div class="content-container">
         <img src="https://cdn.discordapp.com/attachments/1314033250947039292/1314044338212311070/XtraX.png?ex=675256a7&is=67510527&hm=b0a8e247a40fafa1f26f8a0d4ccfe630516f9ae9f8aed7808ddde42d6630afbc&" alt="Logo de Discord" class="logo">
+        <p class="call-to-action">Agrega XtraBox a tu servidor</p>
     </div>
 </body>
 </html>
