--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
         <h3>xStrikez_</h3>
         <p>Owner</p>
       </div>
+      <div class="staff-member">
+        <img src="https://minotar.net/avatar/GAMERMANITO/100" alt="GAMERMANITO">
+        <h3>GAMERMANITO</h3>
+        <p>Owner</p>
+      </div>
     </div>
     <footer>
       <p>&copy; 2024 MineNight. <a href="#">Términos y Condiciones</a></p>
