--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background: url('https://wallpaperaccess.com/full/2984711.jpg') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/originals/5a/ba/67/5aba67c6215e557bb57f0f475addc4c0.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -114,13 +114,13 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="https://cdn.discordapp.com/icons/1258383389778776104/7a01ab620cdb5a8514b3f27fabd703c5.png?size=2048" alt="MineNight Logo">
+      <img src="https://cdn.discordapp.com/icons/1300951643126370374/7d2170e7a28306eb64b567a8ecbdf51b.png" alt="MineCloudy Logo">
     </div>
     <div class="content">
-      <h1>¡Bienvenido a la web de MineNight!</h1>
+      <h1>¡Bienvenido a la web de MineCloudy!</h1>
       <div class="buttons">
-        <a href="#" class="button">IP: MineNight.us</a>
-        <a href="https://discord.gg/vK5MtZk3f7" target="_blank" class="button">Únete a nuestro Discord</a>
+        <a href="#" class="button">IP: MineCloudy.us</a>
+        <a href="https://discord.gg/kK7c62QVFF" target="_blank" class="button">Únete a nuestro Discord</a>
       </div>
     </div>
     <div class="staff">
@@ -137,7 +137,7 @@
       </div>
     </div>
     <footer>
-      <p>&copy; 2024 MineNight. <a href="#">Términos y Condiciones</a></p>
+      <p>&copy; 2024 MineCloudy <a href="#">Términos y Condiciones</a></p>
     </footer>
   </div>
 </body>
