--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: Minecrafter-Reg-ttf;
       background: url('https://i.pinimg.com/originals/5a/ba/67/5aba67c6215e557bb57f0f475addc4c0.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
