--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: Minecrafter-Reg-ttf;
+      font-family: sans-serif;
       background: url('https://i.pinimg.com/originals/5a/ba/67/5aba67c6215e557bb57f0f475addc4c0.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
@@ -65,8 +65,10 @@
     .staff {
       padding: 50px 20px;
       text-align: center;
-      display: flex;
-      justify-content: center;
+    }
+    .staff h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
     }
     .staff-member {
       display: inline-block;
@@ -77,10 +79,6 @@
       padding: 10px;
       margin: 10px;
       text-align: center;
-      transition: transform 0.3s ease;
-    }
-    .staff-member:hover {
-      transform: translateZ(10px);
     }
     .staff-member img {
       width: 100px;
@@ -139,9 +137,8 @@
       </div>
     </div>
     <footer>
-      <p>&copy; 2024 MineCloudy <a href="#">Términos y Condiciones</a></p>
+      <p>&copy; 2024 MineCloudy <a href="#">TYC</a></p>
     </footer>
   </div>
 </body>
 </html>
-
