--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
     .logo img {
       width: 120px;
       height: auto;
-      transition: transform 0.3s ease;
-    }
-    .logo img:hover {
-      transform: scale(1.1);
     }
     .content {
       flex: 1;
@@ -137,8 +133,9 @@
       </div>
     </div>
     <footer>
-      <p>&copy; 2024 MineCloudy <a href="#">TYC</a></p>
+      <p>&copy; 2024 MineCloudy <a href="#">Terminos y Condiciones</a></p>
     </footer>
   </div>
 </body>
 </html>
+
