--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MineCloudy | Bienvenido</title>
+  <title>MineCloudy</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: 'Arial', sans-serif;
       background: url('https://i.pinimg.com/originals/5a/ba/67/5aba67c6215e557bb57f0f475addc4c0.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
@@ -16,37 +16,32 @@
     .container {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      height: 100vh;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo {
-      margin-top: 20px;
-    }
-    .logo img {
-      width: 120px;
-      height: auto;
-    }
-    .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+    .logo img {
+      width: 150px;
+      height: auto;
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+    .logo img:hover {
+      transform: scale(1.1);
     }
     .content h1 {
       font-size: 3em;
       margin-bottom: 20px;
+      font-family: 'Minecraft', sans-serif;
     }
     .buttons {
       display: flex;
       gap: 20px;
     }
     .button {
-      padding: 10px 20px;
-      font-size: 1em;
+      padding: 12px 25px;
+      font-size: 1.1em;
       color: white;
       background: rgba(0, 0, 0, 0.8);
       border: 1px solid white;
@@ -58,40 +53,13 @@
       background: white;
       color: black;
     }
-    .staff {
-      padding: 50px 20px;
-      text-align: center;
-    }
-    .staff h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
-    .staff-member {
-      display: inline-block;
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid white;
-      border-radius: 10px;
-      width: 150px;
-      padding: 10px;
-      margin: 10px;
-      text-align: center;
-    }
-    .staff-member img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-    }
-    .staff-member h3 {
-      font-size: 1.2em;
-      margin: 0;
-    }
-    .staff-member p {
-      font-size: 1em;
-      margin: 0;
-    }
     footer {
-      margin-top: 20px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      padding: 15px;
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.7);
     }
     footer p {
       font-size: 0.9em;
@@ -100,7 +68,6 @@
     footer a {
       color: white;
       text-decoration: none;
-      transition: color 0.3s;
     }
     footer a:hover {
       color: #007BFF;
@@ -119,23 +86,11 @@
         <a href="https://discord.gg/kK7c62QVFF" target="_blank" class="button">Únete a nuestro Discord</a>
       </div>
     </div>
-    <div class="staff">
-      <h2>Miembros del Staff</h2>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/xStrikez_/100" alt="xStrikez_">
-        <h3>xStrikez_</h3>
-        <p>Owner</p>
-      </div>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/GAMERMANITO/100" alt="GAMERMANITO">
-        <h3>GAMERMANITO</h3>
-        <p>Owner</p>
-      </div>
-    </div>
-    <footer>
-      <p>&copy; 2024 MineCloudy <a href="#">Terminos y Condiciones</a></p>
-    </footer>
   </div>
+  <footer>
+    <p>&copy; 2024 MineCloudy <a href="#">TYC</a></p>
+  </footer>
 </body>
 </html>
+
 
