--- a/index.html
+++ b/index.html
@@ -1,140 +1,142 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MineCloudy | Bienvenido</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background: url('https://i.pinimg.com/originals/5a/ba/67/5aba67c6215e557bb57f0f475addc4c0.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      height: 100vh;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo {
-      margin-top: 20px;
-    }
-    .logo img {
-      width: 120px;
-      height: auto;
-    }
-    .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-    .content h1 {
-      font-size: 3em;
-      margin-bottom: 20px;
-    }
-    .buttons {
-      display: flex;
-      gap: 20px;
-    }
-    .button {
-      padding: 10px 20px;
-      font-size: 1em;
-      color: white;
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid white;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
-    .button:hover {
-      background: white;
-      color: black;
-    }
-    .staff {
-      padding: 50px 20px;
-      text-align: center;
-    }
-    .staff h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
-    .staff-member {
-      display: inline-block;
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid white;
-      border-radius: 10px;
-      width: 150px;
-      padding: 10px;
-      margin: 10px;
-      text-align: center;
-    }
-    .staff-member img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-    }
-    .staff-member h3 {
-      font-size: 1.2em;
-      margin: 0;
-    }
-    .staff-member p {
-      font-size: 1em;
-      margin: 0;
-    }
-    footer {
-      margin-top: 20px;
-    }
-    footer p {
-      font-size: 0.9em;
-      color: rgba(255, 255, 255, 0.7);
-    }
-    footer a {
-      color: white;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    footer a:hover {
-      color: #007BFF;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EnderyClub</title>
+    <style>
+        /* Reset y configuraciones generales */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            color: white;
+            background-color: #1a1a1a;
+            background-image: url('https://e1.pxfuel.com/desktop-wallpaper/1010/455/desktop-wallpaper-minecraft-end-city-minecraft-the-end.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.8);
+            width: 100%;
+            padding: 15px 20px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            color: #00FF00;
+            text-shadow: 0 0 10px #00FF00;
+        }
+
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            padding: 20px;
+        }
+
+        /* Contenedor principal */
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            width: 80%;
+            margin-top: 20px;
+        }
+
+        /* Estilo de las cajas */
+        .box {
+            background: linear-gradient(145deg, #23272a, #2c2f33);
+            border-radius: 15px;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6), -5px -5px 15px rgba(255, 255, 255, 0.1);
+        }
+
+        .box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(0, 255, 0, 0.6);
+        }
+
+        .box img {
+            width: 60px;
+            margin-bottom: 15px;
+        }
+
+        .box a {
+            display: block;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .box a:hover {
+            color: #00FF00;
+            text-shadow: 0 0 10px #00FF00;
+        }
+
+        footer {
+            width: 100%;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.9);
+            padding: 10px 0;
+            margin-top: 40px;
+            font-size: 0.9rem;
+        }
+
+        footer p {
+            color: #777;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">
-      <img src="https://cdn.discordapp.com/icons/1300951643126370374/7d2170e7a28306eb64b567a8ecbdf51b.png" alt="MineCloudy Logo">
-    </div>
-    <div class="content">
-      <h1>¡Bienvenido a la web de MineCloudy!</h1>
-      <div class="buttons">
-        <a href="#" class="button">IP: MineCloudy.us</a>
-        <a href="https://discord.gg/kK7c62QVFF" target="_blank" class="button">Únete a nuestro Discord</a>
-      </div>
-    </div>
-    <div class="staff">
-      <h2>Miembros del Staff</h2>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/xStrikez_/100" alt="xStrikez_">
-        <h3>xStrikez_</h3>
-        <p>Owner</p>
-      </div>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/GAMERMANITO/100" alt="GAMERMANITO">
-        <h3>GAMERMANITO</h3>
-        <p>Owner</p>
-      </div>
-    </div>
+    <header>
+        <h1>EnderyClub</h1>
+    </header>
+    <main>
+        <div class="container">
+            <!-- Cuadro IP -->
+            <div class="box">
+                <img src="https://art.pixilart.com/1c020ec9c3ce31a.png" alt="Minecraft IP Logo">
+                <h2>Conéctate al servidor</h2>
+                <a href="#" onclick="copyToClipboard('EnderyClub.us')">IP: EnderyClub.us</a>
+            </div>
+
+            <!-- Cuadro Discord -->
+            <div class="box">
+                <img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" alt="Discord Logo">
+                <h2>Únete a nuestro Discord</h2>
+                <a href="https://discord.gg/wZ7Y3ZpkZF" target="_blank">¡Haz clic aquí!</a>
+            </div>
+        </div>
+    </main>
     <footer>
-      <p>&copy; 2024 MineCloudy <a href="#">Terminos y Condiciones</a></p>
+        <p>© 2024 EnderyClub. Todos los derechos reservados.</p>
     </footer>
-  </div>
+
+    <script>
+        // Copiar IP al portapapeles
+        function copyToClipboard(text) {
+            navigator.clipboard.writeText(text).then(() => {
+                alert("IP copiada al portapapeles: " + text);
+            });
+        }
+    </script>
 </body>
 </html>
