--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EnderyClub</title>
+    <title>MineCloudy</title>
     <style>
         /* Reset y configuraciones generales */
         * {
@@ -16,7 +16,7 @@
             font-family: 'Arial', sans-serif;
             color: white;
             background-color: #1a1a1a;
-            background-image: url('https://e1.pxfuel.com/desktop-wallpaper/1010/455/desktop-wallpaper-minecraft-end-city-minecraft-the-end.jpg');
+            background-image: url('https://vignette.wikia.nocookie.net/minecraftpocketedition/images/1/17/IMG_3976.PNG/revision/latest?cb=20161125122418');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -115,7 +115,7 @@
             <div class="box">
                 <img src="https://art.pixilart.com/1c020ec9c3ce31a.png" alt="Minecraft IP Logo">
                 <h2>Conéctate al servidor</h2>
-                <a href="#" onclick="copyToClipboard('EnderyClub.us')">IP: EnderyClub.us</a>
+                <a href="#" onclick="copyToClipboard('MineCloudy.us')">IP: MineCloudy.us</a>
             </div>
 
             <!-- Cuadro Discord -->
@@ -127,7 +127,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2024 EnderyClub. Todos los derechos reservados.</p>
+        <p>© 2024 MineCloudy.us Todos los derechos reservados.</p>
     </footer>
 
     <script>
