--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       border-radius: 10px;
       background: rgba(255, 255, 255, 0.1);
       width: 30%;
+      transition: box-shadow 0.3s, transform 0.3s;
+    }
+    .feature:hover {
+      box-shadow: 0 0 15px 5px white;
+      transform: scale(1.05);
     }
     .feature img {
       width: 100px;
@@ -114,6 +119,11 @@
       border: 1px solid #f39c12;
       border-radius: 10px;
       background: rgba(0, 0, 0, 0.8);
+      transition: box-shadow 0.3s, transform 0.3s;
+    }
+    .staff-member:hover {
+      box-shadow: 0 0 15px 5px white;
+      transform: scale(1.05);
     }
     .staff-member img {
       width: 100px;
@@ -159,9 +169,9 @@
   </header>
 
   <div class="hero">
-    <h1>Bienvenido a MineCloudy</h1>
+    <h1>Bienvenido a BoxPvP</h1>
     <p>La mejor experiencia PvP en Minecraft</p>
-    <button class="button">Conéctate: MineCloudy.us</button>
+    <button class="button">Conéctate: play.boxpvp.com</button>
   </div>
 
   <section id="features" class="features">
@@ -191,14 +201,14 @@
         <p>Dueño</p>
       </div>
       <div class="staff-member">
-        <img src="https://minotar.net/avatar/Steve/100" alt="Steve">
+        <img src="https://minotar.net/avatar/lil/100" alt="Steve">
         <h3>GAMERMANITO</h3>
         <p>Dueño</p>
       </div>
       <div class="staff-member">
         <img src="https://minotar.net/avatar/Alex/100" alt="Alex">
-        <h3>Proximo staff..</h3>
-        <p>Ayudante</p>
+        <h3>Proximo staff...</h3>
+        <p>¿?</p>
       </div>
     </div>
   </section>
