--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
   </header>
 
   <div class="hero">
-    <h1>Bienvenido a BoxPvP</h1>
+    <h1>Bienvenido a MineCloudy | Web</h1>
     <p>La mejor experiencia PvP en Minecraft</p>
-    <button class="button">Conéctate: play.boxpvp.com</button>
+    <button class="button">Conéctate: MineCloudy.us</button>
   </div>
 
   <section id="features" class="features">
