--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     }
     .feature {
       text-align: center;
-      padding: 20px;
+      padding: 30px; /* Incrementado */
       border: 1px solid #f39c12;
       border-radius: 10px;
       background: rgba(255, 255, 255, 0.1);
-      width: 30%;
+      width: 40%; /* Más ancho */
       transition: box-shadow 0.3s, transform 0.3s;
     }
     .feature:hover {
@@ -88,7 +88,7 @@
       transform: scale(1.05);
     }
     .feature img {
-      width: 100px;
+      width: 150px; /* Incrementado */
       margin-bottom: 20px;
     }
     .feature h3 {
@@ -176,17 +176,17 @@
 
   <section id="features" class="features">
     <div class="feature">
-      <img src="https://via.placeholder.com/100" alt="Icono 1">
+      <img src="https://via.placeholder.com/150" alt="Icono 1">
       <h3>Eventos Únicos</h3>
       <p>Participa en nuestros eventos exclusivos cada semana.</p>
     </div>
     <div class="feature">
-      <img src="https://via.placeholder.com/100" alt="Icono 2">
+      <img src="https://via.placeholder.com/150" alt="Icono 2">
       <h3>Mapas Épicos</h3>
       <p>Explora arenas diseñadas para los mejores combates.</p>
     </div>
     <div class="feature">
-      <img src="https://via.placeholder.com/100" alt="Icono 3">
+      <img src="https://via.placeholder.com/150" alt="Icono 3">
       <h3>Comunidad Activa</h3>
       <p>Únete a nuestra comunidad de jugadores apasionados.</p>
     </div>
