--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <section id="features" class="features">
     <div class="feature">
-      <img src="https://via.placeholder.com/150" alt="Icono 1">
+      <img src="https://cdn.discordapp.com/attachments/1301349477474504724/1317297294294650900/22af2c53-03ce-413e-aa0c-f861a2ccf870.png?ex=675e2c35&is=675cdab5&hm=101d831f81402f71ada10dbea907862bf299d007456c100c31cd3778df838769&/150" alt="Icono 1">
       <h3>Eventos Únicos</h3>
       <p>Participa en nuestros eventos exclusivos cada semana.</p>
     </div>
@@ -186,7 +186,7 @@
       <p>Explora arenas diseñadas para los mejores combates.</p>
     </div>
     <div class="feature">
-      <img src="https://via.placeholder.com/150" alt="Icono 3">
+      <img src="https://cdn.discordapp.com/attachments/1301349477474504724/1317297294294650900/22af2c53-03ce-413e-aa0c-f861a2ccf870.png?ex=675e2c35&is=675cdab5&hm=101d831f81402f71ada10dbea907862bf299d007456c100c31cd3778df838769&/150" alt="Icono 3">
       <h3>Comunidad Activa</h3>
       <p>Únete a nuestra comunidad de jugadores apasionados.</p>
     </div>
