--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
         <p>Dueño</p>
       </div>
       <div class="staff-member">
-        <img src="https://minotar.net/avatar/Alex/100" alt="Alex">
-        <h3>Proximo staff...</h3>
-        <p>¿?</p>
+        <img src="https://minotar.net/avatar/NotPapillon503/100" alt="Alex">
+        <h3>NotPapillon503</h3>
+        <p>Helper</p>
       </div>
     </div>
   </section>
