--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="staff-member">
         <img src="https://minotar.net/avatar/NotPapillon503/100" alt="Alex">
         <h3>NotPapillon503</h3>
-        <p>Helper</p>
+        <p>Ayudante</p>
       </div>
     </div>
   </section>
