--- a/index.html
+++ b/index.html
@@ -3,58 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pagina de MineCloudy</title>
+  <title>MineCloudy</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    @font-face {
+      font-family: 'Minecraftia';
+      src: url('https://fontmeme.com/fonts/minecrafter-font/'); /* Reemplazar con la URL de la fuente */
+    }
+
     body {
       margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: url('https://vignette.wikia.nocookie.net/minecraftpocketedition/images/1/17/IMG_3976.PNG/revision/latest?cb=20161125122418') no-repeat center center fixed;
-      background-size: cover;
+      font-family: 'Minecraftia', Arial, sans-serif;
+      background: linear-gradient(135deg, #1a1a1a, #333);
       color: white;
     }
+
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.8);
+      padding: 20px 50px;
+      background: #111;
       border-bottom: 2px solid #f39c12;
     }
+
     header .logo {
       display: flex;
       align-items: center;
+      gap: 15px;
     }
+
     header .logo img {
-      width: 50px;
-      height: 50px;
-      margin-right: 10px;
+      width: 60px;
+      height: 60px;
     }
+
     header nav {
       display: flex;
-      gap: 20px;
+      gap: 30px;
     }
+
     header nav a {
       text-decoration: none;
       color: white;
-      font-size: 1.2em;
+      font-size: 1.3em;
       transition: color 0.3s;
     }
+
     header nav a:hover {
       color: #f39c12;
     }
+
     .hero {
       text-align: center;
-      padding: 100px 20px;
+      padding: 120px 20px;
+      background: url('https://i.imgur.com/3XoOM5W.png') no-repeat center;
+      background-size: cover;
+      background-attachment: fixed;
     }
+
     .hero h1 {
       font-size: 4em;
       margin-bottom: 20px;
+      color: #f39c12;
     }
+
     .hero p {
       font-size: 1.5em;
       margin-bottom: 40px;
     }
+
     .hero .button {
       padding: 15px 30px;
       font-size: 1.2em;
@@ -65,91 +83,61 @@
       cursor: pointer;
       transition: background 0.3s;
     }
+
     .hero .button:hover {
       background: #e67e22;
     }
+
     .features {
       display: flex;
-      justify-content: space-around;
-      padding: 50px 20px;
-      background: rgba(0, 0, 0, 0.9);
+      justify-content: space-between;
+      gap: 20px;
+      padding: 60px 50px;
     }
+
     .feature {
       text-align: center;
-      padding: 30px; /* Incrementado */
-      border: 1px solid #f39c12;
-      border-radius: 10px;
+      padding: 40px;
+      border: 2px solid #f39c12;
+      border-radius: 15px;
       background: rgba(255, 255, 255, 0.1);
-      width: 40%; /* Más ancho */
-      transition: box-shadow 0.3s, transform 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
+
     .feature:hover {
-      box-shadow: 0 0 15px 5px white;
       transform: scale(1.05);
+      box-shadow: 0 0 20px 10px #f39c12;
     }
+
     .feature img {
-      width: 150px; /* Incrementado */
+      width: 200px;
       margin-bottom: 20px;
     }
+
     .feature h3 {
-      font-size: 1.5em;
-      margin-bottom: 10px;
+      font-size: 2em;
+      color: #f39c12;
+      margin-bottom: 15px;
     }
-    .feature p {
-      font-size: 1em;
-    }
-    .staff {
-      text-align: center;
-      padding: 50px 20px;
-    }
-    .staff h2 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-    }
-    .staff-grid {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-    .staff-member {
-      text-align: center;
-      width: 150px;
-      padding: 10px;
-      border: 1px solid #f39c12;
-      border-radius: 10px;
-      background: rgba(0, 0, 0, 0.8);
-      transition: box-shadow 0.3s, transform 0.3s;
-    }
-    .staff-member:hover {
-      box-shadow: 0 0 15px 5px white;
-      transform: scale(1.05);
-    }
-    .staff-member img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-    }
-    .staff-member h3 {
-      font-size: 1.2em;
-      margin: 0;
-    }
+
     footer {
       text-align: center;
       padding: 20px;
-      background: rgba(0, 0, 0, 0.8);
+      background: #111;
       border-top: 2px solid #f39c12;
     }
+
     footer p {
       font-size: 1em;
       color: rgba(255, 255, 255, 0.7);
     }
+
     footer a {
       color: white;
       text-decoration: none;
       transition: color 0.3s;
     }
+
     footer a:hover {
       color: #f39c12;
     }
@@ -169,52 +157,31 @@
   </header>
 
   <div class="hero">
-    <h1>Bienvenido a MineCloudy | Web</h1>
-    <p>La mejor experiencia PvP en Minecraft</p>
-    <button class="button">Conéctate: MineCloudy.us</button>
+    <h1>Bienvenido a MineCloudy</h1>
+    <p>El mejor PvP y aventuras únicas</p>
+    <button class="button">Conéctate ahora: MineCloudy.us</button>
   </div>
 
   <section id="features" class="features">
     <div class="feature">
-      <img src="https://cdn.discordapp.com/attachments/1301349477474504724/1317297294294650900/22af2c53-03ce-413e-aa0c-f861a2ccf870.png?ex=675e2c35&is=675cdab5&hm=101d831f81402f71ada10dbea907862bf299d007456c100c31cd3778df838769&/150" alt="Icono 1">
+      <img src="https://via.placeholder.com/200" alt="Evento">
       <h3>Eventos Únicos</h3>
-      <p>Participa en nuestros eventos exclusivos cada semana.</p>
+      <p>Participa en torneos y desafíos épicos.</p>
     </div>
     <div class="feature">
-      <img src="https://cdn.discordapp.com/attachments/1301349477474504724/1317299504545796177/Diseno_sin_titulo_19.png?ex=675e2e44&is=675cdcc4&hm=3cecbf3222af24dd4e08abf530e6b086ce1727b0a3b9a1da501faf2c182361a0&/150" alt="Icono 2">
-      <h3>Mapas Épicos</h3>
-      <p>Explora arenas diseñadas para los mejores combates.</p>
+      <img src="https://via.placeholder.com/200" alt="Mapas">
+      <h3>Mapas Increíbles</h3>
+      <p>Explora los mundos más detallados y emocionantes.</p>
     </div>
     <div class="feature">
-      <img src="https://cdn.discordapp.com/attachments/1301349477474504724/1317297294294650900/22af2c53-03ce-413e-aa0c-f861a2ccf870.png?ex=675e2c35&is=675cdab5&hm=101d831f81402f71ada10dbea907862bf299d007456c100c31cd3778df838769&/150" alt="Icono 3">
+      <img src="https://via.placeholder.com/200" alt="Comunidad">
       <h3>Comunidad Activa</h3>
-      <p>Únete a nuestra comunidad de jugadores apasionados.</p>
-    </div>
-  </section>
-
-  <section id="staff" class="staff">
-    <h2>Conoce al Staff</h2>
-    <div class="staff-grid">
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/xStrikez_/100" alt="xStrikez_">
-        <h3>xStrikez_</h3>
-        <p>Dueño</p>
-      </div>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/lil/100" alt="Steve">
-        <h3>GAMERMANITO</h3>
-        <p>Dueño</p>
-      </div>
-      <div class="staff-member">
-        <img src="https://minotar.net/avatar/NotPapillon503/100" alt="Alex">
-        <h3>NotPapillon503</h3>
-        <p>Ayudante</p>
-      </div>
+      <p>Únete y encuentra amigos apasionados por Minecraft.</p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 MineCloudy.us Todos los derechos reservados. <a href="#">Términos y Condiciones</a></p>
+    <p>&copy; 2024 MineCloudy.us. Todos los derechos reservados. <a href="#">Términos</a></p>
   </footer>
 </body>
 </html>
